@@ -2,6 +2,8 @@
 v4.0.3-git
 ----------
 
+[jan] Include parent tasks in cost object labels.
+[jan] Only return completed tasks up to a week old as cost objects.
 [mjr] Set correct timezone on incoming ActiveSync tasks (Bug #12053).
 [jan] Update French translation (Paul De Vlieger
       <paul.de_vlieger@moniut.univ-bpclermont.fr>).
